syntax = "proto3";

option java_package = "com.ydanneg.erply.datastore";
option java_multiple_files = true;

message UserSessionProto {
  string user_id = 1;
  string username = 2;
  string clientCode = 3;
  string token = 4;
}
